Re-enable printReport test with increased PermGen